--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -16,6 +16,20 @@
 	<dependencies>
 	
 	<!-- 추가 -->	
+	<!-- 스프링 제공 파일 업로드 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+	
+	
 		<!-- json -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
